test/files/neg/t4163.scala
class Bug {
  val z = (
      for {
        x = 3
        y <- 0 to 100
      } yield y
    ).toArray
}
